<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Update">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_update_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#1D8ECE"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_update_profile_title"
                android:layout_gravity="center"
                android:id="@+id/title_toolbar"
                tools:layout_editor_absoluteY="18dp"
                tools:layout_editor_absoluteX="185dp"
                android:textSize="24sp"
                android:textColor="#FFFFFF"/>

        <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/close_button"
                android:background="@drawable/close"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textAlignment="center"
                tools:layout_editor_absoluteY="4dp"
                tools:layout_editor_absoluteX="16dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/update_profile_scrollview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintTop_toBottomOf="@+id/activity_update_toolbar"
            app:layout_constraintBottom_toTopOf="@+id/update_button_holder">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/id_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_id_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:textColor="#000000" android:layout_marginLeft="16dp" android:layout_marginRight="8dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/profile_id_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#ADA7A7"/>

            <TextView
                    android:text="@string/update_firstname_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_firstname_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/firstname_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/update_middlename_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_middlename_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/middlename_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/what_is_your_middlename"/>

            <TextView
                    android:text="@string/update_lastname_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_lastname_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/lastname_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/email_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_email_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/email_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/mobile_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_mobile_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/mobile_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:maxLength="16"/>

            <TextView
                    android:text="@string/update_landline_label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_landline_label"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/landline_edit"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:maxLength="15"
                    android:hint="@string/what_is_your_landline"/>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
            android:id="@+id/update_button_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/update_profile_scrollview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/update_button_text"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:id="@+id/update_profile_button"
                android:layout_marginTop="8dp"
                android:background="#1D8ECE"/>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/updateProgressBarHolder"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.4"
            android:layout_width="match_parent"
            android:fillViewport="false"
            android:visibility="gone"
            android:background="#000000"
            android:clickable="true"
            android:layout_height="0dp">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                android:layout_gravity="center"

        />
    </FrameLayout>

    <FrameLayout
            android:id="@+id/updatePopupHolder"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:fillViewport="false"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@drawable/my_border"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/ic_launcher_background"
                android:layout_marginEnd="8dp">

            <TextView
                    android:id="@+id/updateTxtClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#03A9F4"
                    android:text="@string/close_icon"

                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="0.0"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/update_network_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Connection Timed Out"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>