<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/toggleborder"
        app:layout_constraintBottom_toBottomOf="@+id/remainingLeavesTitle"
        app:layout_constraintLeft_toLeftOf="@id/remainingLeavesTitle"
        app:layout_constraintRight_toRightOf="@id/remainingLeavesTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remainingLeavesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/remaining_leaves_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/vacationLeaveHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/toggleborder"
        app:layout_constraintBottom_toBottomOf="@id/vacationLeaveHolder"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintLeft_toLeftOf="@id/vacationLeaveHolder"
        app:layout_constraintRight_toRightOf="@id/vacationLeaveHolder"
        app:layout_constraintTop_toBottomOf="@+id/remainingLeavesTitle"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/vacationLeaveHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toggleborder"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sickLeaveHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingLeavesTitle">

        <TextView
            android:id="@+id/vacationLeaveTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/vacation_leave_title"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vacationLeave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sickLeaveHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toggleborder"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacationLeaveHolder">

        <TextView
            android:id="@+id/sickLeaveTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/sick_leave_title"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sickLeave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="12.5" />
    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/toggleborder"
        app:layout_constraintBottom_toBottomOf="@id/usedLeavesTitle"
        app:layout_constraintLeft_toLeftOf="@id/usedLeavesTitle"
        app:layout_constraintRight_toRightOf="@id/usedLeavesTitle"
        app:layout_constraintTop_toBottomOf="@+id/sickLeaveHolder" />

    <TextView
        android:id="@+id/usedLeavesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/used_leaves_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/titleHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sickLeaveHolder" />

    <LinearLayout
        android:id="@+id/titleHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toggleborder"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usedLeavesTitle">

        <TextView
            android:id="@+id/leaveDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"

            android:layout_weight="1"
            android:text="@string/leave_date_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/numberOfDaysTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:text="@string/no_of_days"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>