<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_success_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#1D8ECE"
                android:theme="@style/ToolbarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/success_message">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success_title"
                    android:layout_gravity="center"
                    android:id="@+id/title_toolbar"
                    tools:layout_editor_absoluteY="18dp"
                    tools:layout_editor_absoluteX="185dp"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"/>

        </androidx.appcompat.widget.Toolbar>

        <Button
                android:text="@string/ok_button_text"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:id="@+id/ok_button"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/success_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="#1D8ECE"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/success_message"
                style="@style/NameStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/success_message_text"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_success_toolbar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>