<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LogsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggleborder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/leaveDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:adjustViewBounds="true"
                android:text="@string/date_title"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/numberOfDays"
                app:layout_constraintEnd_toStartOf="@+id/numberOfDays"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/numberOfDays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/time_in_title"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/itemTimeOut"
                app:layout_constraintStart_toEndOf="@+id/leaveDuration"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemTimeOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/time_out_title"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/numberOfDays"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberOfDays" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="vertical" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" app:layout_constraintVertical_bias="0.0"
        />
        <FrameLayout
                android:id="@+id/logsProgressBarHolder"
                android:animateLayoutChanges="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:fillViewport="false"
                android:visibility="gone"
                android:clickable="true"
                android:layout_height="0dp">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:indeterminate="true"
                    android:layout_gravity="center"

            />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>